text fix - dark mode

--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ button:hover {
 /* Dark Theme */
 .dark {
     background: #222;
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 /* Pastel Theme */
